2005-03-09  Thomas Vander Stichele  <thomas at apestaart dot org>

	* data/glade/admin-wizard.glade:
	* data/glade/authenticate.glade:
	* data/glade/connection-dialog.glade:
	* data/glade/connections.glade:
	* data/glade/greeter-initial.glade:
	* data/glade/open-connection.glade:
	* data/glade/wizard.glade:
	* data/glade/wizard_consumption.glade:
	* data/glade/wizard_disk.glade:
	* data/glade/wizard_firewire.glade:
	* data/glade/wizard_license.glade:
	* data/glade/wizard_overlay.glade:
	* data/glade/wizard_source.glade:
	* data/glade/wizard_theora.glade:
	* data/glade/wizard_vorbis.glade:
	* tools/gtk-2.4-ify-glade-files:
	  remove focus_on_click and add_tearoffs

2005-03-09  Thomas Vander Stichele  <thomas at apestaart dot org>

	* data/glade/authenticate.glade:
	* data/glade/connection-dialog.glade:
	* data/glade/greeter-authenticate.glade:
	* data/glade/greeter-connect_to_existing.glade:
	* data/glade/greeter-initial.glade:
	* data/glade/greeter-load_connection.glade:
	  2.4-ify
	* flumotion/admin/gtk/client.py:
	  fix an AP
	* flumotion/common/code.py:
	  remove some unused imports

2005-03-09  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/test/test_checkers.py:
	* flumotion/twisted/checkers.py:
	* flumotion/twisted/credentials.py:
	* flumotion/worker/job.py:
	* flumotion/worker/worker.py:
	  increase coverage for checkers to 100%.  Fix obvious security
	  problem.  Rename Anonymous to Passwordless since that's what it is.

2005-03-09  Andy Wingo  <wingo@pobox.com>

	* flumotion/admin/gtk/client.py (Window.debug_start_shell_cb): Use
	flumotion.common.code instead of code.

	* flumotion/common/code.py: New file, makes the debugging shell
	run in parallel with the GTK main loop, and makes tab completion
	work. Whoop!

2005-03-08  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/common/keycards.py:
	  allow setting a domain on a keycard
	* flumotion/component/consumers/httpstreamer/http.py: