@@ -1,3 +1,8 @@
+2005-03-10  Thomas Vander Stichele  <thomas at apestaart dot org>
+
+	* flumotion/admin/gtk/connections.py:
+	  sacrifice animals to the god of python checking
+
 2005-03-09  Thomas Vander Stichele  <thomas at apestaart dot org>
 
 	* data/glade/admin-wizard.glade:
